--- a/index.html
+++ b/index.html
@@ -66,16 +66,16 @@
 
     #display .title {
       text-align: center;
-      font-size: 250%;
+      font-size: 150%;
       font-weight: bold;
       color: black;
-      margin-top: 0.5em;
-      margin-bottom: 0.5em;
+      margin-top: 0.2em;
+      margin-bottom: 0.2em;
     }
 
     #display .subtitle {
       text-align: center;
-      font-size: 150%;
+      font-size: 120%;
       font-weight: bold;
       color: black;
       margin-top: 0.2em;
@@ -487,12 +487,12 @@
   <div id="toc" style="min-width: 5em;">
     <ol>
       <li>
-        <a href="#overview" raw="# Overview" lo="1" class="highlighted">
+        <a href="#overview" raw="# Overview" lo="1">
           <span class="toctext">Overview</span>
         </a>
       </li>
       <li>
-        <a href="#activities" raw="# Activities" lo="13" class="">
+        <a href="#activities" raw="# Activities" lo="13" class="highlighted">
           <span class="toctext">Activities</span>
         </a>
       </li>
@@ -503,27 +503,27 @@
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="1" lf="1" class="highlighted"><a name="overview" number="1" lo="1" raw="# Overview" class="hanchor" href="#overview"><span class="hnumber">1</span>&nbsp;<span class="htext">Overview</span></a></h1>
+        <h1 lo="1" lf="1"><a name="overview" number="1" lo="1" raw="# Overview" class="hanchor" href="#overview"><span class="hnumber">1</span>&nbsp;<span class="htext">Overview</span></a></h1>
       </div>
       <div class="block">
-        <p lo="3" lf="3" class="active">These are activities that students work on during a weekly 50–minute recitation for PHYS 260. To maximize time that students spend working on problems, I typically give at most a 10–minute review. Often, my 10–minute overview involves working through an example that is nearly identical to the first problem.</p>
+        <p lo="3" lf="3">These are activities that students work on during a weekly 50–minute recitation for PHYS 260. To maximize time that students spend working on problems, I typically give at most a 10–minute review. Often, my 10–minute overview involves working through an example that is nearly identical to the first problem.</p>
       </div>
       <div class="comment block">
-        <div lo="5" lf="5" class="">%The motivation for this style of recitation is that in the past, I would solve problems at the board for 45 minutes and then give a quiz at the end. Based on the results of the (very simple) quizes, few students got much out of my presentation. In addition, often students would ask for help on homework problems after the recitation that were nearly identical to the problem covered in recitation. It was clear from their questions that their notes from, or memory of, my presentation were of little use.</div>
+        <div lo="5" lf="5">%The motivation for this style of recitation is that in the past, I would solve problems at the board for 45 minutes and then give a quiz at the end. Based on the results of the (very simple) quizes, few students got much out of my presentation. In addition, often students would ask for help on homework problems after the recitation that were nearly identical to the problem covered in recitation. It was clear from their questions that their notes from, or memory of, my presentation were of little use.</div>
       </div>
       <div class="comment block">
-        <div lo="7" lf="7" class="">%Prior to working on these, approximately 1/2–2/3 of the students will have attended two 75–minute lectures covering the associated chapter and content.</div>
+        <div lo="7" lf="7">%Prior to working on these, approximately 1/2–2/3 of the students will have attended two 75–minute lectures covering the associated chapter and content.</div>
       </div>
       <div class="comment block">
-        <div lo="9" lf="9" class="">%The problems on these activities are generally basic and simple. However, I find that most students only have time to attempt half of the problems and there are many questions. Based on experience, I assume that after two 75–minute lectures, most students have only knowledge of keywords and associated concepts and are not able to solve problems that require more than identifying the equation to use given variables in the problem statement.</div>
+        <div lo="9" lf="9">%The problems on these activities are generally basic and simple. However, I find that most students only have time to attempt half of the problems and there are many questions. Based on experience, I assume that after two 75–minute lectures, most students have only knowledge of keywords and associated concepts and are not able to solve problems that require more than identifying the equation to use given variables in the problem statement.</div>
       </div>
       <div class="comment block">
-        <div lo="11" lf="11" class="">%Students turn in their work at the end of class and I hand out solutions. The minimum score for their work is 7/10 points.</div>
+        <div lo="11" lf="11">%Students turn in their work at the end of class and I hand out solutions. The minimum score for their work is 7/10 points.</div>
       </div>
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="13" lf="13" class=""><a name="activities" number="2" lo="13" raw="# Activities" class="hanchor" href="#activities"><span class="hnumber">2</span>&nbsp;<span class="htext">Activities</span></a></h1>
+        <h1 lo="13" lf="13" class="highlighted"><a name="activities" number="2" lo="13" raw="# Activities" class="hanchor" href="#activities"><span class="hnumber">2</span>&nbsp;<span class="htext">Activities</span></a></h1>
       </div>
       <div class="block">
         <p lo="15" lf="15">When you click the links for the textbook, you will get a <code>404</code> error. To see the content, remove the <code>_remove_</code> from the URL. The directory for all parts of the textbook is <a href="https://drive.google.com/drive/folders/1RbJbDlpZB6THg1cKvlmRnvQYewRKmn03?usp=sharing_remove_">here</a>.</p>
@@ -565,14 +565,14 @@
             </div>
             <div class="block">
               <ul lo="24" lf="26" class="">
-                <li lo="24" lf="24" class="">
+                <li lo="24" lf="24" class="active">
                   <div class="block">
                     <p><a href="Vectors/Vectors.md">Activity</a> </p>
                   </div>
                 </li>
                 <li lo="25" lf="25" class="">
                   <div class="block">
-                    <p><a href="Vectors/Vector_Notes.md">Instructor Notes</a> </p>
+                    <p><a href="https://github.com/rweigel/phys260/tree/master/Vectors">Source Files and Notes</a> </p>
                   </div>
                 </li>
                 <li lo="26" lf="27" class="">
