--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
     #toc {
       flex: 0 1 auto;
       margin-top: 0em;
-      margin-right: 1em;
       max-width: 12em;
       overflow: hidden auto;
     }
@@ -41,7 +40,7 @@
 
     #toc ol {
       list-style-type: decimal;
-      margin: 0.25em 0em 0em 0.25em;
+      margin: 0.25em 0.5em 0em 0.25em;
       padding-inline-start: 1em;
     }
 
@@ -488,7 +487,7 @@
   <div id="toc" style="min-width: 5em;">
     <ol>
       <li>
-        <a href="#overview" class="highlighted">
+        <a href="#overview">
           <span class="toctext">Overview</span>
         </a>
       </li>
@@ -517,6 +516,11 @@
               <span class="toctext">Continuous Charge Distributions</span>
             </a>
           </li>
+          <li>
+            <a href="#electric-flux" class="highlighted">
+              <span class="toctext">Electric Flux</span>
+            </a>
+          </li>
         </ol>
       </li>
     </ol>
@@ -526,7 +530,7 @@
     </div>
     <div class="section">
       <div class="block">
-        <h1 class="highlighted"><a name="overview" number="1" class="hanchor" href="#overview"><span class="hnumber">1</span>&nbsp;<span class="htext">Overview</span></a></h1>
+        <h1><a name="overview" number="1" class="hanchor" href="#overview"><span class="hnumber">1</span>&nbsp;<span class="htext">Overview</span></a></h1>
       </div>
       <div class="block">
         <p>These are activities that students work on during a weekly 50–minute recitation for PHYS 260 at GMU. To maximize time that students spend working on problems, I typically give at most a 10–minute review. Often, my 10–minute overview involves working through an example that is nearly identical to the first problem. If many students are stuck on a part of the problem, I will interrupt the class and have students guide to the answer.</p>
@@ -672,6 +676,25 @@
                   </div>
                 </li>
               </ul>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="section">
+      <div class="block">
+        <h2 class="highlighted"><a name="electric-flux" number="3.4" class="hanchor" href="#electric-flux"><span class="hnumber">3.4</span>&nbsp;<span class="htext">Electric Flux</span></a></h2>
+      </div>
+      <div class="block">
+        <ul>
+          <li>
+            <div class="block">
+              <p>Activity: | <a href="Electric_Flux/Electric_Flux.html">html</a> | <a href="Electric_Flux/Electric_Flux.pdf">pdf</a> |</p>
+            </div>
+          </li>
+          <li>
+            <div class="block">
+              <p><a href="https://github.com/rweigel/phys260/tree/master/Electric_Flux">Source files</a></p>
             </div>
           </li>
         </ul>
