--- a/Electric_Flux/Electric_Flux.html
+++ b/Electric_Flux/Electric_Flux.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Electric_Flux</title>
+  <title>Electric Flux</title>
   <link id="favicon" rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%220.9em%22 font-size=%22100%22>📖</text></svg>">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.0/dist/katex.min.css" />
   <style>
@@ -535,6 +535,9 @@
   </div>
   <div id="display">
     <div class="section">
+      <div class="block">
+        <p class="title">Electric Flux</p>
+      </div>
     </div>
     <div class="section">
       <div class="block">
