--- a/Electric_Flux/Electric_Flux.html
+++ b/Electric_Flux/Electric_Flux.html
@@ -515,7 +515,7 @@
         </a>
         <ol class="toc" style="display: none;">
           <li>
-            <a href="#example" class="highlighted">
+            <a href="#example">
               <span class="toctext">Example</span>
             </a>
           </li>
@@ -927,7 +927,7 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 class="highlighted"><a name="example" number="3.1" class="hanchor" href="#example"><span class="hnumber">3.1</span>&nbsp;<span class="htext">Example</span></a></h2>
+        <h2><a name="example" number="3.1" class="hanchor" href="#example"><span class="hnumber">3.1</span>&nbsp;<span class="htext">Example</span></a></h2>
       </div>
       <div class="block">
         <div class="block inline-html">
