Encl charge draft

--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
         </a>
         <ol class="toc" style="display: none;">
           <li>
-            <a href="#electric-force-between-point-charges-coulomb-s-law">
+            <a href="#electric-force-between-point-charges-coulomb-s-law" class="highlighted">
               <span class="toctext">Electric Force Between Point Charges (Coulomb’s Law)</span>
             </a>
           </li>
@@ -517,7 +517,7 @@
             </a>
           </li>
           <li>
-            <a href="#electric-flux" class="highlighted">
+            <a href="#electric-flux">
               <span class="toctext">Electric Flux</span>
             </a>
           </li>
@@ -587,18 +587,13 @@
     </div>
     <div class="section">
       <div class="block">
-        <h2><a name="electric-force-between-point-charges-coulomb-s-law" number="3.1" class="hanchor" href="#electric-force-between-point-charges-coulomb-s-law"><span class="hnumber">3.1</span>&nbsp;<span class="htext">Electric Force Between Point Charges (Coulomb’s Law)</span></a></h2>
+        <h2 class="highlighted"><a name="electric-force-between-point-charges-coulomb-s-law" number="3.1" class="hanchor" href="#electric-force-between-point-charges-coulomb-s-law"><span class="hnumber">3.1</span>&nbsp;<span class="htext">Electric Force Between Point Charges (Coulomb’s Law)</span></a></h2>
       </div>
       <div class="block">
         <ul>
           <li>
             <div class="block">
-              <p><a href="Electric_Force/Electric_Force.html" target="_blank">Activity</a> </p>
-            </div>
-          </li>
-          <li>
-            <div class="block">
-              <p><a href="https://github.com/rweigel/phys260/tree/master/Electric_Force">Source files</a> </p>
+              <p><a href="https://github.com/rweigel/phys260/tree/master/Electric_Force">Activity</a> </p>
             </div>
           </li>
           <li>
@@ -622,7 +617,7 @@
         <ul>
           <li>
             <div class="block">
-              <p><a href="Electric_Field/Electric_Field.html" target="_blank">Activity</a> </p>
+              <p><a href="https://github.com/rweigel/phys260/tree/master/Electric_Field">Activity</a></p>
             </div>
           </li>
           <li>
@@ -646,12 +641,7 @@
         <ul>
           <li>
             <div class="block">
-              <p>Activity: | <a href="Continuous_Charge_Distributions/Continuous_Charge_Distributions.html">html</a> | <a href="Continuous_Charge_Distributions/Continuous_Charge_Distributions.pdf">pdf</a> |</p>
-            </div>
-          </li>
-          <li>
-            <div class="block">
-              <p><a href="https://github.com/rweigel/phys260/tree/master/Continuous_Charge_Distributions">Source files</a></p>
+              <p><a href="https://github.com/rweigel/phys260/tree/master/Continuous_Charge_Distributions">Activity</a></p>
             </div>
           </li>
           <li>
@@ -683,18 +673,13 @@
     </div>
     <div class="section">
       <div class="block">
-        <h2 class="highlighted"><a name="electric-flux" number="3.4" class="hanchor" href="#electric-flux"><span class="hnumber">3.4</span>&nbsp;<span class="htext">Electric Flux</span></a></h2>
+        <h2><a name="electric-flux" number="3.4" class="hanchor" href="#electric-flux"><span class="hnumber">3.4</span>&nbsp;<span class="htext">Electric Flux</span></a></h2>
       </div>
       <div class="block">
         <ul>
           <li>
             <div class="block">
-              <p>Activity: | <a href="Electric_Flux/Electric_Flux.html">html</a> | <a href="Electric_Flux/Electric_Flux.pdf">pdf</a> |</p>
-            </div>
-          </li>
-          <li>
-            <div class="block">
-              <p><a href="https://github.com/rweigel/phys260/tree/master/Electric_Flux">Source files</a></p>
+              <p><a href="https://github.com/rweigel/phys260/tree/master/Electric_Flux">Activity</a></p>
             </div>
           </li>
         </ul>
