--- a/index.html
+++ b/index.html
@@ -497,12 +497,12 @@
         </a>
       </li>
       <li>
-        <a href="#activities">
+        <a href="#activities" class="highlighted">
           <span class="toctext">Activities</span>
         </a>
         <ol class="toc" style="display: none;">
           <li>
-            <a href="#electric-force-between-point-charges-coulomb-s-law" class="highlighted">
+            <a href="#electric-force-between-point-charges-coulomb-s-law">
               <span class="toctext">Electric Force Between Point Charges (Coulomb’s Law)</span>
             </a>
           </li>
@@ -582,12 +582,15 @@
     </div>
     <div class="section">
       <div class="block">
-        <h1><a name="activities" number="3" class="hanchor" href="#activities"><span class="hnumber">3</span>&nbsp;<span class="htext">Activities</span></a></h1>
+        <h1 class="highlighted"><a name="activities" number="3" class="hanchor" href="#activities"><span class="hnumber">3</span>&nbsp;<span class="htext">Activities</span></a></h1>
+      </div>
+      <div class="block">
+        <div class="comment" style="">%<a href="https://rweigel.github.io/phys260/Electric_Force/Electric_Force-solutions.pdf">https://rweigel.github.io/phys260/Electric_Force/Electric_Force-solutions.pdf</a> %<a href="https://rweigel.github.io/phys260/Electric_Field/Electric_Field-solutions.pdf">https://rweigel.github.io/phys260/Electric_Field/Electric_Field-solutions.pdf</a> %<a href="https://rweigel.github.io/phys260/Electric_Flux/Electric_Flux-solutions.pdf">https://rweigel.github.io/phys260/Electric_Flux/Electric_Flux-solutions.pdf</a></div>
       </div>
     </div>
     <div class="section">
       <div class="block">
-        <h2 class="highlighted"><a name="electric-force-between-point-charges-coulomb-s-law" number="3.1" class="hanchor" href="#electric-force-between-point-charges-coulomb-s-law"><span class="hnumber">3.1</span>&nbsp;<span class="htext">Electric Force Between Point Charges (Coulomb’s Law)</span></a></h2>
+        <h2><a name="electric-force-between-point-charges-coulomb-s-law" number="3.1" class="hanchor" href="#electric-force-between-point-charges-coulomb-s-law"><span class="hnumber">3.1</span>&nbsp;<span class="htext">Electric Force Between Point Charges (Coulomb’s Law)</span></a></h2>
       </div>
       <div class="block">
         <ul>
