--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     #toc {
       flex: 0 1 auto;
       margin-top: 0em;
+      margin-right: 1em;
       max-width: 12em;
       overflow: hidden auto;
     }
@@ -40,7 +41,7 @@
 
     #toc ol {
       list-style-type: decimal;
-      margin: 0.25em 0.5em 0em 0.25em;
+      margin: 0.25em 0em 0em 0.25em;
       padding-inline-start: 1em;
     }
 
@@ -585,7 +586,7 @@
         <h1 class="highlighted"><a name="activities" number="3" class="hanchor" href="#activities"><span class="hnumber">3</span>&nbsp;<span class="htext">Activities</span></a></h1>
       </div>
       <div class="block">
-        <div class="comment" style="">%<a href="https://rweigel.github.io/phys260/Electric_Force/Electric_Force-solutions.pdf">https://rweigel.github.io/phys260/Electric_Force/Electric_Force-solutions.pdf</a> %<a href="https://rweigel.github.io/phys260/Electric_Field/Electric_Field-solutions.pdf">https://rweigel.github.io/phys260/Electric_Field/Electric_Field-solutions.pdf</a> %<a href="https://rweigel.github.io/phys260/Electric_Flux/Electric_Flux-solutions.pdf">https://rweigel.github.io/phys260/Electric_Flux/Electric_Flux-solutions.pdf</a></div>
+        <div class="comment">%<a href="https://rweigel.github.io/phys260/Electric_Force/Electric_Force-solutions.pdf">https://rweigel.github.io/phys260/Electric_Force/Electric_Force-solutions.pdf</a> %<a href="https://rweigel.github.io/phys260/Electric_Field/Electric_Field-solutions.pdf">https://rweigel.github.io/phys260/Electric_Field/Electric_Field-solutions.pdf</a> %<a href="https://rweigel.github.io/phys260/Electric_Flux/Electric_Flux-solutions.pdf">https://rweigel.github.io/phys260/Electric_Flux/Electric_Flux-solutions.pdf</a></div>
       </div>
     </div>
     <div class="section">
