--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
         </a>
       </li>
       <li>
-        <a href="#activities" class="highlighted">
+        <a href="#activities">
           <span class="toctext">Activities</span>
         </a>
         <ol class="toc" style="display: none;">
@@ -520,6 +520,11 @@
           <li>
             <a href="#electric-flux">
               <span class="toctext">Electric Flux</span>
+            </a>
+          </li>
+          <li>
+            <a href="#enclosed-charge" class="highlighted">
+              <span class="toctext">Enclosed Charge</span>
             </a>
           </li>
         </ol>
@@ -583,10 +588,10 @@
     </div>
     <div class="section">
       <div class="block">
-        <h1 class="highlighted"><a name="activities" number="3" class="hanchor" href="#activities"><span class="hnumber">3</span>&nbsp;<span class="htext">Activities</span></a></h1>
+        <h1><a name="activities" number="3" class="hanchor" href="#activities"><span class="hnumber">3</span>&nbsp;<span class="htext">Activities</span></a></h1>
       </div>
       <div class="block">
-        <div class="comment">%<a href="https://rweigel.github.io/phys260/Electric_Force/Electric_Force-solutions.pdf">https://rweigel.github.io/phys260/Electric_Force/Electric_Force-solutions.pdf</a> %<a href="https://rweigel.github.io/phys260/Electric_Field/Electric_Field-solutions.pdf">https://rweigel.github.io/phys260/Electric_Field/Electric_Field-solutions.pdf</a> %<a href="https://rweigel.github.io/phys260/Electric_Flux/Electric_Flux-solutions.pdf">https://rweigel.github.io/phys260/Electric_Flux/Electric_Flux-solutions.pdf</a></div>
+        <div class="comment">%<a href="https://rweigel.github.io/phys260/Electric_Force/Electric_Force-solutions.pdf">https://rweigel.github.io/phys260/Electric_Force/Electric_Force-solutions.pdf</a> %<a href="https://rweigel.github.io/phys260/Electric_Field/Electric_Field-solutions.pdf">https://rweigel.github.io/phys260/Electric_Field/Electric_Field-solutions.pdf</a> %<a href="https://rweigel.github.io/phys260/Electric_Flux/Electric_Flux-solutions.pdf">https://rweigel.github.io/phys260/Electric_Flux/Electric_Flux-solutions.pdf</a> %<a href="https://rweigel.github.io/phys260/Electric_Flux/Enclosed_Charge-solutions.pdf">https://rweigel.github.io/phys260/Electric_Flux/Enclosed_Charge-solutions.pdf</a></div>
       </div>
     </div>
     <div class="section">
@@ -684,6 +689,20 @@
           <li>
             <div class="block">
               <p><a href="https://github.com/rweigel/phys260/tree/master/Electric_Flux">Activity</a></p>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="section">
+      <div class="block">
+        <h2 class="highlighted"><a name="enclosed-charge" number="3.5" class="hanchor" href="#enclosed-charge"><span class="hnumber">3.5</span>&nbsp;<span class="htext">Enclosed Charge</span></a></h2>
+      </div>
+      <div class="block">
+        <ul>
+          <li>
+            <div class="block">
+              <p><a href="https://github.com/rweigel/phys260/tree/master/Enclosed_Charge">Activity</a></p>
             </div>
           </li>
         </ul>
