--- a/index.html
+++ b/index.html
@@ -523,11 +523,16 @@
             </a>
           </li>
           <li>
-            <a href="#enclosed-charge" class="highlighted">
+            <a href="#enclosed-charge">
               <span class="toctext">Enclosed Charge</span>
             </a>
           </li>
         </ol>
+      </li>
+      <li>
+        <a href="#electric-potential" class="highlighted">
+          <span class="toctext">Electric Potential</span>
+        </a>
       </li>
     </ol>
   </div>
@@ -696,13 +701,32 @@
     </div>
     <div class="section">
       <div class="block">
-        <h2 class="highlighted"><a name="enclosed-charge" number="3.5" class="hanchor" href="#enclosed-charge"><span class="hnumber">3.5</span>&nbsp;<span class="htext">Enclosed Charge</span></a></h2>
+        <h2><a name="enclosed-charge" number="3.5" class="hanchor" href="#enclosed-charge"><span class="hnumber">3.5</span>&nbsp;<span class="htext">Enclosed Charge</span></a></h2>
       </div>
       <div class="block">
         <ul>
           <li>
             <div class="block">
               <p><a href="https://github.com/rweigel/phys260/tree/master/Enclosed_Charge">Activity</a></p>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="section">
+      <div class="block">
+        <h1 class="highlighted"><a name="electric-potential" number="4" class="hanchor" href="#electric-potential"><span class="hnumber">4</span>&nbsp;<span class="htext">Electric Potential</span></a></h1>
+      </div>
+      <div class="block">
+        <ul>
+          <li>
+            <div class="block">
+              <p><a href="Electric_Potential/Electric_Potential.html" target="_blank">Activity</a> </p>
+            </div>
+          </li>
+          <li>
+            <div class="block">
+              <p><a href="Electric_Potential/Electric_Potential-min.html" target="_blank">Shorter Activity</a> </p>
             </div>
           </li>
         </ul>
