--- a/Electric_Potential/Electric_Potential.html
+++ b/Electric_Potential/Electric_Potential.html
@@ -499,7 +499,7 @@
         </a>
         <ol class="toc" style="display: none;">
           <li>
-            <a href="#problem-uniform-field">
+            <a href="#problem-uniform-field" class="highlighted">
               <span class="toctext">Problem – Uniform Field</span>
             </a>
           </li>
@@ -735,7 +735,7 @@
     </div>
     <div class="section">
       <div class="block">
-        <h2><a name="problem-uniform-field" number="2.1" class="hanchor" href="#problem-uniform-field"><span class="hnumber">2.1</span>&nbsp;<span class="htext">Problem – Uniform Field</span></a></h2>
+        <h2 class="highlighted"><a name="problem-uniform-field" number="2.1" class="hanchor" href="#problem-uniform-field"><span class="hnumber">2.1</span>&nbsp;<span class="htext">Problem – Uniform Field</span></a></h2>
       </div>
       <div class="block">
         <p>The following diagram shows a region of space where the electric field is constant and has a value of <span len="14" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mord">3</span><span class="mord text"><span class="mord">&nbsp;N/C</span></span></span></span></span>.</p>
@@ -752,9 +752,13 @@
               <p>You place a charge of <span len="13" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.7667em;vertical-align:-0.0833em;"></span><span class="mord">+</span><span class="mord">3</span><span class="mord text"><span class="mord">&nbsp;C</span></span></span></span></span> at point <span len="3" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.6833em;"></span><span class="mord mathnormal">A</span></span></span></span>. What happens to that charge when it is released?</p>
             </div>
             <div class="block">
-              <p> <strong>Answer</strong>: Moves to right. By convention field lines point in direction of force on positive charge.</p>
+              <p> \ifsolutions <strong>Answer</strong>: Moves to right. By convention field lines point in direction of force on positive charge. \fi</p>
             </div>
           </li>
+        </ol>
+      </div>
+      <div class="block">
+        <ol start="2">
           <li>
             <div class="block">
               <p>You move charge of <span len="13" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.7667em;vertical-align:-0.0833em;"></span><span class="mord">+</span><span class="mord">3</span><span class="mord text"><span class="mord">&nbsp;C</span></span></span></span></span> from <span len="3" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.4306em;"></span><span class="mord mathnormal">a</span></span></span></span> to <span len="3" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.6944em;"></span><span class="mord mathnormal">b</span></span></span></span>. (a) How much work did you do? (b) How much work was done by the electric field? (c) By how much has the potential energy of the charge changed?</p>
